package dev.jgunsett.entity;


public enum EstadoTurno {
    PENDIENTE,
    CONFIRMADO,
    CANCELADO,
    REALIZADO
}
